# winewarden

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
config/: default.toml  pirate-safe.toml  relaxed.toml
config/examples/: heroic.toml  lutris.toml  steam.toml
crates/monitor/: Cargo.toml
crates/monitor/src/: fs_watch.rs  lib.rs  memory.rs  mount_ns.rs  net_watch.rs  path_redirect.rs  proc_watch.rs  sandbox.rs  seccomp_handler.rs  signals.rs  syscalls.rs
crates/net-compat/: Cargo.toml
crates/net-compat/src/: destinations.rs  dns.rs  dns_parser.rs  lib.rs  telemetry.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: decision.rs  lib.rs
crates/policy-engine/src/rules/: filesystem.rs  mod.rs  network.rs  process.rs
crates/policy-engine/src/trust/: mod.rs  scoring.rs  tiers.rs
crates/policy-engine/src/zones/: mod.rs  redirects.rs  sacred.rs
crates/prefix-manager/: Cargo.toml
crates/prefix-manager/src/: layout.rs  lib.rs  lint.rs  quarantine.rs  repair.rs  snapshots.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: human.rs  json.rs  lib.rs  redact.rs  timeline.rs
crates/runner/: Cargo.toml
crates/runner/src/: command.rs  detect.rs  env.rs  lib.rs  lifecycle.rs
crates/winewarden-cli/: Cargo.toml
crates/winewarden-cli/src/: main.rs
crates/winewarden-cli/src/commands/: config.rs  daemon.rs  mod.rs  prefix.rs  report.rs  run.rs  status.rs  trust.rs
crates/winewarden-cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
crates/winewarden-core/: Cargo.toml
crates/winewarden-core/src/: config.rs  error.rs  ids.rs  ipc.rs  lib.rs  paths.rs  store.rs  trust.rs  types.rs
crates/winewarden-daemon/: Cargo.toml
crates/winewarden-daemon/src/: ipc.rs  main.rs  scheduler.rs  store.rs
docs/: architecture.md  configuration.md  glossary.md  index.html  networking.md  pirate-safe-mode.md  prefix-hygiene.md  reports.md  sacred-zones.md  threat-model.md  trust-tiers.md  vision.md  winewarden-mode.md
docs/_layouts/: default.html
docs/assets/css/: main.css
docs/assets/js/: main.js
docs/docs/: index.html
integrations/heroic/: README.md  notes.md
integrations/lutris/: README.md  launcher.yml
integrations/steam/: README.md  wrapper.sh
scripts/: dev-setup.sh
system/apparmor/: README.md  winewarden.profile
system/selinux/: README.md
system/systemd/: README.md  winewarden.service  winewarden.socket
