[workspace]
members = [
  "crates/winewarden-cli",
  "crates/winewarden-core",
  "crates/policy-engine",
  "crates/runner",
  "crates/monitor",
  "crates/prefix-manager",
  "crates/net-compat",
  "crates/reporting",
  "crates/winewarden-daemon",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["ind4skylivey"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.8", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting"] }
