[package]
name = "monitor"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
notify = "6.1"
winewarden-core = { path = "../winewarden-core" }
policy-engine = { path = "../policy-engine" }
reporting = { path = "../reporting" }
