[package]
name = "monitor"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
notify = "6.1"
winewarden-core = { path = "../winewarden-core" }
policy-engine = { path = "../policy-engine" }
reporting = { path = "../reporting" }
landlock = "0.4.4"
libseccomp = "0.4.0"
nix = { version = "0.30.1", features = ["fs", "socket", "uio", "process", "poll", "ioctl", "mount", "sched", "user"] }
byteorder = "1.5.0"

[dev-dependencies]
tempfile = "3.10"
