[package]
name = "prefix-manager"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
walkdir.workspace = true
uuid.workspace = true
winewarden-core = { path = "../winewarden-core" }
reporting = { path = "../reporting" }
