[package]
name = "winewarden-core"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
time.workspace = true
