[package]
name = "winewarden-daemon"
edition.workspace = true
version.workspace = true
authors.workspace = true

[[bin]]
name = "winewarden-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
libc = "0.2"
winewarden-core = { path = "../winewarden-core" }
monitor = { path = "../monitor" }
policy-engine = { path = "../policy-engine" }
prefix-manager = { path = "../prefix-manager" }
reporting = { path = "../reporting" }
runner = { path = "../runner" }
net-compat = { path = "../net-compat" }
